web/libraries/fractal/components/tests/filter/pass/round.twig
{{ 42.55|round }} <br>
{# outputs 43 #}

{{ 42.55|round(1, 'floor') }}
{# outputs 42.5 #}
